--- a/css/sytle.css
+++ b/css/sytle.css
@@ -1,4 +1,58 @@
-#foto-principal{
-    width: 65%;
-    border-radius: 40px;
+body{
+    margin: 0;
+    font-family: "Poppins", sans-serif;
+
 }
+.overlay{
+    background-color: rgb(0, 0, 0) ; 
+    height: 100vh;
+    opacity: 0.6;
+}
+.contenedor{
+    background-image: url("../imagenes/fondo-atleticodemadrid.jpg");
+    background-position: center center;
+    background-repeat: repeat;
+    background-size: contain;
+    height: 100vh;
+}
+header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 2;
+    padding: 10px 0;
+}
+.navegacion {
+    display: flex;
+    justify-content: center;
+    gap:50px;
+    padding-top: 20px; 
+}
+.navegacion a{
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 15px;
+    
+}
+.navegacion a:hover{
+    color: #fd6a6a;
+}
+.contendor-inicio{
+    width: 33%;
+
+    text-align: center;
+    margin-top: 12%;
+
+}
+.contendor-inicio h1{
+color: white;
+font-size: 4.5rem;
+
+}
+.centrado{
+    text-align: center;
+    color: #fd6a6a;
+}
+
+
