--- a/css/sytle.css
+++ b/css/sytle.css
@@ -1,12 +1,10 @@
 body{
     margin: 0;
     font-family: "Poppins", sans-serif;
-
 }
 .overlay{
-    background-color: rgb(0, 0, 0) ; 
+    background-color: rgba(0, 0, 0, 0.555) ; 
     height: 100vh;
-    opacity: 0.6;
 }
 .contenedor{
     background-image: url("../imagenes/fondo-atleticodemadrid.jpg");
@@ -16,13 +14,11 @@ body{
     height: 100vh;
 }
 header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 2;
     padding: 10px 0;
 }
 .navegacion {
+    position: fixed;
+    width: 100%;
     display: flex;
     justify-content: center;
     gap:50px;
@@ -38,20 +34,47 @@ header {
 .navegacion a:hover{
     color: #fd6a6a;
 }
-.contendor-inicio{
+body{
+    background-color: #100c14;
+    
+}
+.contenedor-nav{
     width: 33%;
     text-align: center;
-    margin-top: 12%;
-
+    margin-top: 15%;
 }
-.contendor-inicio h1{
+.contenedor-nav h1{
 color: white;
 font-size: 4.5rem;
-
+}
+.contenedor-nav p{
+    text-transform: uppercase;
+    position: relative;
+    font-family: sans-serif;
+    text-transform: uppercase;
+    font-size: 14px;
+    letter-spacing: 2px;
+    overflow: hidden;
+    background: linear-gradient(90deg, #000, #fd6a6a, #000);
+    background-repeat: no-repeat;
+    background-size: 80%;
+    animation: animate 3s linear infinite;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: rgba(255, 255, 255, 0);
 }
 .centrado{
     text-align: center;
     color: #fd6a6a;
 }
+
+@keyframes animate {
+    0% {
+      background-position: -500%;
+    }
+    100% {
+      background-position: 500%;
+    }
+  }
+
 
 
