--- a/css/sytle.css
+++ b/css/sytle.css
@@ -2,21 +2,30 @@ body{
     margin: 0;
     font-family: "Poppins", sans-serif;
 }
-.overlay{
+.overlay-principal{
     background-color: rgba(0, 0, 0, 0.555) ; 
     height: 100vh;
 }
-.contenedor{
+.overlay{
+    background-color: rgba(0, 0, 0, 0.555) ; 
+    height: 20vh;
+}
+.contenedor-principal{
     background-image: url("../imagenes/fondo-atleticodemadrid.webp");
     background-position: center center;
     background-repeat: repeat;
     background-size: contain;
     height: 100vh;
 }
+.contenedor{
+    background-image: url("../imagenes/fondo-atleticodemadrid.webp");
+    background-position: center center;
+    background-repeat: no-repeat;
+    height: 60vh;
+}
 header {
     padding: 10px 0;
 }
-
 
 .navegacion {
     position: fixed;
@@ -45,7 +54,7 @@ nav a{
     color: #fd6a6a;
 }
 body{
-    background-color: #100c14;
+    background-color: black;
 }
 .contenedor-nav{
     width: 33%;
@@ -78,12 +87,83 @@ font-size: 4.5rem;
 h2{
     text-align: center;
     color: white;
+    font-size: 40px;
+    padding: 20px;
+    padding-top: 25px;
+    margin: 0;
 }
 section{
+    background-color: #000000;
     height: 100vh;
+}
+footer{
+background-color: #121212;
+color: white;
+text-align: center;
+height: 520px;
+}
+.footer-icons{
+    font-size:15px;   
+    text-align: center;
+    color: white;
+    display: flex;
+    justify-content: center;
+    gap:35px;
+    padding-bottom: 40px;
+}
+footer p:hover{
+    color: #fd6a6a;
+}
+.fa-twitter,
+.fa-facebook,
+.fa-instagram,
+.fa-youtube-play{
+    border: 1px solid #fd6a6a;
+    padding: 20px;
+    border-radius: 100%;
+}
+.fa-twitter:hover,
+.fa-facebook:hover,
+.fa-instagram:hover,
+.fa-youtube-play:hover{
+    color: #000;
+    border: 1px solid #ffffff;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 100%;
+}
+.fa-facebook{
+    padding: 20px 22px; ;
+}
+.fa-facebook:hover{
+    padding: 20px 22px; ;
+}
+footer a{
+    text-decoration: none;
+    color: #ffffff;
+}
+.footer-text-icons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.footer-text{
+    text-align: start;
+    width: 20%;
+    margin: 0 auto;
+    padding-bottom: 15px;
+}
+.fa-map-marker,
+.fa-phone,
+.fa-envelope,
+.fa-paperclip{
+    margin-right: 15px;
+    color: #fd6a6a;
+}
+.contenedor-enlaces{
+    background-color: #121212;
 
 }
-
 @keyframes animate {
     0% {
       background-position: -500%;
@@ -91,7 +171,7 @@ section{
     100% {
       background-position: 500%;
     }
-  }
+}
 
 
 
