--- a/css/sytle.css
+++ b/css/sytle.css
@@ -1,4 +1,218 @@
+body{
+    font-family: "Poppins", sans-serif;
+    margin: 0;
+}
+.overlay-principal{
+    background-color: rgba(0, 0, 0, 0.555) ; 
+    height: 100vh;
+}
+.overlay{
+    background-color: rgba(0, 0, 0, 0.555) ; 
+    height: 20vh;
+}
+.contenedor-principal{
+    background-image: url("../imagenes/fondo-atleticodemadrid.webp");
+    background-position: center center;
+    background-repeat: repeat;
+    background-size: contain;
+    height: 100vh;
+}
+.contenedor{
+    background-image: url("../imagenes/fondo-atleticodemadrid.webp");
+    background-position: center center;
+    background-repeat: no-repeat;
+    height: 20vh;
+}
+header {
+    padding: 10px 0;
+}
 
+.navegacion {
+    position: fixed;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap:50px;
+    padding-top: 20px; 
+}
+.navegacion a{
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 15px;
+    
+}
+.navegacion img{
+    padding-top: -120px;
+    
+}
+
+nav a{
+    margin-top: 20px;
+}
+.navegacion a:hover{
+    color: #fd6a6a;
+}
+body{
+    background-color: black;
+}
+.contenedor-nav{
+    width: 33%;
+    text-align: center;
+    margin-top: 15%;
+}
+.contenedor-nav h1{
+color: white;
+font-size: 4.5rem;
+}
+.contenedor-nav p{
+    text-transform: uppercase;
+    position: relative;
+    font-family: sans-serif;
+    text-transform: uppercase;
+    font-size: 14px;
+    letter-spacing: 2px;
+    overflow: hidden;
+    background: linear-gradient(90deg, #000, #fd6a6a, #000);
+    background-repeat: no-repeat;
+    background-size: 80%;
+    animation: animate 3s linear infinite;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: rgba(255, 255, 255, 0);
+}
+.centrado-sub{
+    text-align: center;
+    color: #fd6a6a;
+}
+h2{
+    text-align: center;
+    color: white;
+    font-size: 40px;
+    padding: 20px;
+    padding-top: 25px;
+    margin: 0;
+}
+section{
+    background-color: #000000;
+    height: 100vh;
+}
+footer{
+background-color: #121212;
+color: white;
+text-align: center;
+height: 520px;
+}
+.footer-icons{
+    font-size:15px;   
+    text-align: center;
+    color: white;
+    display: flex;
+    justify-content: center;
+    gap:35px;
+    padding-bottom: 40px;
+}
+footer p:hover{
+    color: #fd6a6a;
+}
+.fa-twitter,
+.fa-facebook,
+.fa-instagram,
+.fa-youtube-play{
+    border: 1px solid #fd6a6a;
+    padding: 20px;
+    border-radius: 100%;
+}
+.fa-twitter:hover,
+.fa-facebook:hover,
+.fa-instagram:hover,
+.fa-youtube-play:hover{
+    color: #000;
+    border: 1px solid #ffffff;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 100%;
+}
+.fa-facebook{
+    padding: 20px 22px; ;
+}
+.fa-facebook:hover{
+    padding: 20px 22px; ;
+}
+footer a{
+    text-decoration: none;
+    color: #ffffff;
+}
+.footer-text-icons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.footer-text{
+    text-align: start;
+    width: 20%;
+    margin: 0 auto;
+    padding-bottom: 15px;
+}
+.fa-map-marker,
+.fa-phone,
+.fa-envelope,
+.fa-paperclip{
+    margin-right: 15px;
+    color: #fd6a6a;
+}
+.contenedor-enlaces{
+    background-color: #121212;
+
+}
+.title-pag{
+    text-align: center;
+    color: white;
+    font-size: 40px;
+    padding: 20px;
+    padding-top: 80px;
+    margin: 0;
+}
+.enlaces-general{
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+}
+.pag-enlace{
+    width: 100%;
+    margin-left: 50px;
+    background-color: #121212;
+    box-shadow: 0 4px 8px #fd6a6a85;
+    margin-top: 40px;
+    border-radius: 5%;
+    padding: 0;
+}
+.pag-enlace img{
+    width: 100%;
+    border-radius: 5%;
+    opacity: 0.7;
+}
+.pag-enlace:hover{
+    transform: scale(1.1);
+    opacity: 1;
+}
+
+.pag-enlace img:hover{
+    opacity: 1;
+}
+h3{
+    text-align: center;
+    color: white;
+    text-transform: uppercase   ;
+}
+
+@keyframes animate {
+    0% {
+      background-position: -500%;
+    }
+    100% {
+      background-position: 500%;
+    }
+}
 
 
 
