--- a/css/sytle.css
+++ b/css/sytle.css
@@ -44,7 +44,6 @@ header {
 }
 .navegacion img{
     padding-top: -120px;
-    
 }
 
 nav a{
@@ -53,19 +52,57 @@ nav a{
 .navegacion a:hover{
     color: #fd6a6a;
 }
+
+.menu-desple {
+    margin-top: 20px;
+    position: relative;
+}
+.menu-desple-2{
+    position: relative;
+}
+
+.menu-desple-contenido {
+    display: none;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.534);
+    min-width: 160px;
+    z-index: 1;
+}
+.menu-desple:hover > .menu-desple-contenido {
+    display: block;
+}
+.menu-desple-2:hover > .menu-desple-contenido {
+    display: block;
+}
+.menu-desple-contenido .menu-desple {
+    position: relative;
+}
+.menu-desple-contenido .menu-desple-contenido {
+    left: 100%;
+    top: 0;
+}
+.menu-desple-contenido a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.menu-desple-contenido a:hover {
+    color:  #fd6a6a;
+}
 body{
     background-color: black;
 }
-.contenedor-nav{
+.contenedor-hearder{
     width: 33%;
     text-align: center;
     margin-top: 15%;
 }
-.contenedor-nav h1{
+.contenedor-hearder h1{
 color: white;
 font-size: 4.5rem;
 }
-.contenedor-nav p{
+.contenedor-hearder p{
     text-transform: uppercase;
     position: relative;
     font-family: sans-serif;
@@ -94,13 +131,13 @@ h2{
 }
 section{
     background-color: #000000;
-    height: 100vh;
+    height: 75vh;
 }
 footer{
-background-color: #121212;
-color: white;
-text-align: center;
-height: 520px;
+    background-color: #121212;
+    color: white;
+    text-align: center;
+    height: 520px;
 }
 .footer-icons{
     font-size:15px;   
@@ -205,6 +242,81 @@ h3{
     text-transform: uppercase   ;
 }
 
+
+.contenedor-noticias{
+    margin-left: 30px;
+    text-align: center;
+    display: flex;
+    margin: 0 auto;
+    width: 70%;
+}
+
+.contenedor-noticias .noticia:hover{
+    box-shadow: 0px -1px 17px -4px #ffffff;
+}
+
+.noticia{
+    margin-top: 40px;
+    margin-left: 40px;
+    border-radius: 5%;
+    box-shadow: 0px -1px 17px -4px #fd6a6a;
+    width: 22%;
+    height: 412px;
+}
+.noticia:nth-of-type(1){
+    background-image:  url("../imagenes/atm-vs-celta.webp");
+}
+
+.noticia:hover p{
+    position: relative;
+    top: 170px;
+    transform: scale(1.5);
+    transition: transform 2.0s ease, top 2.0s ease;
+}
+
+.noticia:nth-of-type(2):hover p, .noticia:nth-of-type(3):hover p, .noticia:nth-of-type(4):hover p{
+    position: relative;
+    top: 170px;
+    transform: scale(1.5);
+    transition: transform 2.0s ease, top 2.0s ease;
+}
+
+.noticia:nth-of-type(2){
+    background-image:  url("../imagenes/barca-copa.webp");
+}
+
+.noticia:nth-of-type(3){
+    background-image:  url("../imagenes/youth-league.webp");
+}
+
+.noticia:nth-of-type(4){
+    background-image:  url("../imagenes/feminino-copa.webp");
+}
+
+.noticia p{
+    position: relative;
+    top: 320px;
+    width: 50%;
+    padding: 20px;
+    margin: 10px;
+    background-color: #fd6a6a8a;
+    border-radius: 10px;
+    color: white;
+    font-size: 12px;
+    margin-left: 50px; 
+}
+.noticia:nth-of-type(2) p,.noticia:nth-of-type(3) p,.noticia:nth-of-type(4) p{
+    top: 310px;
+}
+
+.video-historia{
+    padding: 50px;
+    width: 30%;
+    margin: 0 auto;
+}
+
+
+
 @keyframes animate {
     0% {
       background-position: -500%;
@@ -213,6 +325,80 @@ h3{
       background-position: 500%;
     }
 }
+
+@media(max-width: 480px){
+    
+    .contenedor-principal {
+        background-image: url("../imagenes/fondo-atleticodemadrid.webp");
+        background-size: cover; 
+        height: 100vh;
+    }
+
+    .navegacion {
+        position: absolute;
+        padding-top: 5px;
+        flex-direction: column;
+        gap: 5px;
+        align-items: center;
+    }
+
+    .navegacion a {
+        font-size: 12px; 
+        padding: 0px 0;
+    }
+
+    .contenedor-hearder{
+        margin-top: 320px;
+        width: 100%;
+    }
+
+    .contenedor-hearder h1 {
+        text-align: center;
+        font-size: 3.2rem; 
+    }
+
+    .contenedor-hearder p {
+        font-size: 12px; 
+        letter-spacing: 1px;
+    }
+
+    
+    .contenedor-noticias{
+        text-align: center;
+        display: inline-block;
+        width: 100%;  
+    }
+
+    .noticia{
+        border-radius: 5%;
+        box-shadow: 0px -1px 17px -4px #fd6a6a;
+        width: 70%;
+        height: 412px;
+        text-align: center;
+        margin: 0 auto;
+        margin-top: 40px;
+    }
+
+    section{
+        background-color: #000000;
+        height: 210vh;
+    }
+
+    .footer-text{
+        display: inline-block;
+        width: 100%;
+    }
+    .footer-text p{
+        margin-left: 20px;
+    }
+    .footer-text-icons{
+        margin-left: 25px;
+    }
+
+
+
+}
+
 
 
 
