--- a/css/sytle.css
+++ b/css/sytle.css
@@ -381,7 +381,7 @@ h3{
 
     section{
         background-color: #000000;
-        height: 230vh;
+        height: 2000px;
     }
 
     .footer-text{
@@ -398,6 +398,10 @@ h3{
 
 
 }
+
+
+
+
 
 
 
