--- a/css/sytle.css
+++ b/css/sytle.css
@@ -250,7 +250,7 @@ h3{
     margin-top: 40px;
     margin-left: 40px; 
     border-radius: 5%;
-    box-shadow: 0px -1px 17px -4px #fd6a6a;
+    box-shadow: 0px -1px 17px -4px #FC5F5F;
     width: 22%;
     height: 412px;
 }
