--- a/css/sytle.css
+++ b/css/sytle.css
@@ -127,7 +127,8 @@ h2{
 }
 section{
     background-color: #000000;
-    height: 75vh;
+    margin-bottom: 40px;
+
 }
 footer{
     background-color: #121212;
@@ -203,6 +204,7 @@ footer a{
     width: 80%;
     margin: 0 auto;
     display: flex;
+
 }
 .pag-enlace{
     width: 100%;
@@ -240,6 +242,7 @@ h3{
     display: flex;
     margin: 0 auto;
     width: 70%;
+    margin-bottom: 40px
 }
 
 .contenedor-noticias .noticia:hover{
@@ -336,11 +339,17 @@ a:hover svg path {
         align-items: center;
     }
 
+    .contenedor{
+        height: 40vh
+    }
     .navegacion a {
         font-size: 12px; 
         padding: 0px 0;
     }
 
+    .overlay{
+        height: 120%;
+    }
     .contenedor-hearder{
         margin-top: 320px;
         width: 100%;
@@ -375,7 +384,6 @@ a:hover svg path {
 
     section{
         background-color: #000000;
-        height: 2000px;
     }
 
     .footer-text{
@@ -388,8 +396,19 @@ a:hover svg path {
     .footer-text-icons{
         margin-left: 25px;
     }
+    .title-pag{
+        padding-top: 210px;
+    }
+
+    .enlaces-general{
+        flex-wrap: wrap;
+        display: flex;
+    }
 
 }
+
+
+
 
 
 
